--- a/prism-app/Strings/en-US/Resources.resw
+++ b/prism-app/Strings/en-US/Resources.resw
@@ -154,6 +154,9 @@
     <value>Service is unreachable.</value>
     <comment>Error message for when the service is unreachable</comment>
   </data>
+  <data name="Followers.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Followers</value>
+  </data>
   <data name="GeneralServiceErrorMessage" xml:space="preserve">
     <value>The following error messages were received from the service: {0} {1}</value>
     <comment>Message for general service errors</comment>
@@ -182,6 +185,9 @@ search</value>
   </data>
   <data name="Online.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>Online</value>
+  </data>
+  <data name="Pictures.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
+    <value>Pictures</value>
   </data>
   <data name="Post.[using:Windows.UI.Xaml.Controls]ToolTipService.ToolTip" xml:space="preserve">
     <value>Post</value>
