--- a/prism-app/Strings/en-US/Resources.resw
+++ b/prism-app/Strings/en-US/Resources.resw
@@ -260,4 +260,7 @@ search</value>
   <data name="confirmRepostPicture" xml:space="preserve">
     <value>Repost the current picture.</value>
   </data>
+  <data name="ErrorCannotPost" xml:space="preserve">
+    <value>Posting failed.</value>
+  </data>
 </root>
